...
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </include>

        <ScrollView
            android:layout_width="match_parent"
...
                    android:layout_marginEnd="10dp"
                    android:text="@string/location"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/form_path_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="@string/path">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/form_path_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLength="30"/>

                </com.google.android.material.textfield.TextInputLayout>

...
