<resources>
    <string name="app_name">Real Estate Manager</string>

    //MENU TOOLBAR
    <string name="search">Search</string>
    <string name="update">Update</string>
    <string name="add">Add</string>
    <string name="update_button_select_property_first">To update a property, select a property first in the list.</string>

    //DRAWER MENU
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="map">Map</string>
...
