<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/update_button"
        android:icon="@drawable/baseline_create_white_24"
        app:showAsAction="ifRoom"
        android:title="@string/update">
    </item>

</menu>