...
                android:layout_height="wrap_content">
            </include>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/activity_property_list_container">
            </FrameLayout>

        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

...
